changes for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ bower_components
 .lock-wscript
 
 #zip & dump files 
-# /public/zip
-# /dump
+/public/zip
+/dump
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
