--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bower_components
 .lock-wscript
 
 #zip & dump files 
-/public/zip
+# /public/zip
 /dump
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
